real-cks/1/q15/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-backend
  namespace: team-pink
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-backend
  template:
    metadata:
      labels:
        app: api-backend
    spec:
      containers:
        - name: nginx
          image: nginx:alpine
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: api-backend
  namespace: team-pink
spec:
  selector:
    app: api-backend
  ports:
    - port: 80
      targetPort: 80
