real-cks/1/q15/ingress-tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: secure
  namespace: team-pink
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - secure-ingress.test
      secretName: tls-secret
  rules:
    - host: secure-ingress.test
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-backend
                port:
                  number: 80
